Fix links view when overflow when having a lot of links.

--- a/public/css/link/style.css
+++ b/public/css/link/style.css
@@ -2,14 +2,14 @@
 @import url('https://fonts.googleapis.com/css?family=Gloria+Hallelujah');
 
 html, body {
+    width: 100%;
     height: 100%;
 }
 
 body {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     margin: 0;
+    text-align: center;
+    white-space: nowrap;
     color: white;
     font-family: 'Source Sans Pro', sans-serif;
     background: #131313;
@@ -18,7 +18,7 @@ body {
 
 body::before {
     content: '';
-    position: fixed;
+    position: absolute;
     top: 0;
     left: 0;
     width: 100%;
@@ -27,8 +27,17 @@ body::before {
     z-index: 1;
 }
 
+body::after {
+    content: '';
+    display: inline-block;
+    text-align: center;
+    vertical-align: middle;
+    height: 100%;
+}
+
 .files {
-    display: flex;
+    display: inline-flex;
+    vertical-align: middle;
     flex-direction: column;
     width: 95%;
     max-width: 465px;
@@ -36,7 +45,6 @@ body::before {
 }
 
 .ready-label {
-    /*text-align: left;*/
     font-size: 36px;
     font-family: 'Gloria Hallelujah', cursive;
     margin-bottom: 20px;
@@ -74,27 +82,6 @@ body::before {
     font-size: 22px;
     font-family: 'Gloria Hallelujah', cursive;
 }
-
-/*.info {
-    display: inline-block;
-    position: relative;
-    top: 3px;
-    margin-left: 6px;
-    width: 22px;
-    height: 22px;
-    background: url(../../images/info.svg) no-repeat;
-    opacity: 0.3;
-    cursor: pointer;
-    transition: opacity 150ms;
-}
-
-.info:hover {
-    opacity: 1;
-}
-
-.info::after {
-    white-space: pre;
-}*/
 
 input {
     flex: 1;
